[package]
name = "ghapp_org_access_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = {version = "8.0"}
serde = {version = "1.0", features = ["derive"]}
chrono = {version = "0.4"}
clap = {version = "3", features = ["derive"]}
