[package]
name = "ghapp_org_access_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = {version = "8.0"}
serde = {version = "1.0", features = ["derive"]}
chrono = {version = "0.4"}
clap = {version = "3", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = { version = "1" }
anyhow = { version = "1" }
base64 = { version = "0" }

[dev-dependencies]
assert-json-diff = { version = "2" }
assert_cmd = { version = "2" }
wiremock = { version = "0"}
tokio = { version = "1", features = ["rt", "macros"] }
